# applied-machine-learning-foundations-3856104

./: environment.yml  ml-foundations.ipynb  requirements.txt
data/processed/: king_county_house_sales.parquet
src/: 01_data_setup.py  pyproject.toml
src/ml_foundations/: 02_baseline.py  __init__.py
src/ml_foundations.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
